Fixed Text Wrap issue on Nav Bar

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -25,6 +25,7 @@
         li {
             cursor: pointer;
             color: white;
+            white-space: nowrap;
             text-decoration: none;
             transition: color 0.3s;
             padding: 0.5rem;
